<resources>
    <string name="app_name">EShop</string>
    <string name="app_version">v 1.0.0</string>
    <string name="app_copy">"@ JIAT APP"</string>
    <string name="side_nav_home_tittle">Home</string>
    <string name="side_nav_profile_tittle">Profile</string>
    <string name="side_nav_orders_tittle">Orders</string>
    <string name="side_nav_wishlist_tittle">Wishlist</string>
    <string name="side_nav_cart_tittle">Cart</string>
    <string name="side_nav_message_tittle">Message</string>
    <string name="side_nav_setting_tittle">Setting</string>
    <string name="side_nav_login_tittle">Login</string>
    <string name="side_nav_logout_tittle">Logout</string>
    <string name="bottom_nave_home_tittle">Home</string>
    <string name="bottom_nav_category_tittle">Category</string>
    <string name="bottom_nav_cart_tittle">Cart</string>
    <string name="bottom_nav_profile_tittle">Profile</string>
    <string name="search_hint">Search here</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login_tittle">login to Eshop</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text_sign_in">Sign in</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_create_account">or, create a new account?</string>
    <string name="SignUp_tittle">Join Eshop</string>
    <string name="text_signin_account">Already have an account ?</string>
    <string name="text_password_message">Password must contain at least 6 characters</string>
</resources>