<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/side_nav_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/side_nav_home"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/side_nav_home_tittle"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_profile"
            android:icon="@drawable/account_circle_24px"
            android:title="@string/side_nav_profile_tittle"
            android:visible="true"/>
        <item
            android:id="@+id/side_nav_orders"
            android:icon="@drawable/orders_24px"
            android:title="@string/side_nav_orders_tittle"
            android:visible="false"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_wishlist"
            android:icon="@drawable/favorite_24px"
            android:title="@string/side_nav_wishlist_tittle"
            android:visible="false"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_cart"
            android:icon="@drawable/shopping_cart_24px"
            android:title="@string/side_nav_cart_tittle"
            android:visible="true"
            android:checkable="true"/>
        <item
            android:id="@+id/side_nav_message"
            android:icon="@drawable/chat_24px"
            android:title="@string/side_nav_message_tittle"
            android:checkable="true"
            android:visible="true"/>
        <item
            android:id="@+id/side_nav_setting"
            android:icon="@drawable/settings_24px"
            android:title="@string/side_nav_setting_tittle"
            android:visible="true"
            android:checkable="true"/>
    </group>

    <group android:id="@+id/side_nav_group_auth">
        <item
            android:id="@+id/side_nav_login"
            android:icon="@drawable/login_24px"
            android:title="@string/side_nav_login_tittle"
            android:visible="true"/>
        <item
            android:id="@+id/side_nav_logout"
            android:icon="@drawable/logout_24px"
            android:title="@string/side_nav_logout_tittle"
            android:visible="false"/>
    </group>

</menu>